Fixes #522: IE8/reindeer: Error indicator is missing background when inside tabsheet
svn changeset:10542/svn branch:6.2

--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -4256,6 +4256,7 @@ td.v-datefield-calendarpanel-nextyear {
 .v-ie .v-tabsheet-tabs .v-errorindicator {
 	zoom: 1;
 	display: inline;
+	display: inline-block;
 }
 
 /* Tabsheet scroller styles */
